# hr-breaker

./: .gitignore  CLAUDE.md  LAYOUT.md  PERSONAL.md  README.md  pyproject.toml
src/hr_breaker/: cli.py  config.py  main.py  orchestration_cl.py
src/hr_breaker/agents/: cl_generator.py  cl_reviewer.py
src/hr_breaker/filters/: cl_structure.py  data_validator.py  style_checker.py  word_count.py
src/hr_breaker/models/: __init__.py  cover_letter.py
src/hr_breaker/services/: pdf_storage.py  renderer.py
templates/: cl_guide.md  cl_wrapper.html  resume_guide.md  resume_wrapper.html
tests/: test_cl_pipeline.py
